# gamedot_2d_demo

./: .gitignore  FILE_DOCUMENTATION.md  README.md  🎮 Presentation Title.docx
cpp_version/: CMakeLists.txt  agent.md  entities.json  entities_backup.json  run.sh
cpp_version/art/: enemySwimming_1.png.import  enemySwimming_2.png.import  enemyWalking_1.png.import  enemyWalking_2.png.import  playerGrey_up1.png.import  playerGrey_up2.png.import  playerGrey_walk2.png.import
cpp_version/src/: main.cpp
cpp_version/src/components/: Components.h
cpp_version/src/core/: ECS.h  Game.cpp  Game.h
cpp_version/src/managers/: EntityFactory.cpp  EntityFactory.h  GameManager.h  ResourceManager.cpp  ResourceManager.h
cpp_version/src/systems/: AnimationSystem.cpp  AnimationSystem.h  AudioSystem.cpp  AudioSystem.h  BoundarySystem.cpp  BoundarySystem.h  CollisionSystem.cpp  CollisionSystem.h  InputSystem.cpp  InputSystem.h  MobSpawningSystem.cpp  MobSpawningSystem.h  MovementSystem.cpp  MovementSystem.h  RenderSystem.cpp  RenderSystem.h  System.h  Systems.h  TimingSystem.cpp  TimingSystem.h
gamedot_version/: Gamedot_2D_demo.apple-touch-icon.png.import  Gamedot_2D_demo.html  Gamedot_2D_demo.icon.png.import  Gamedot_2D_demo.pck  Gamedot_2D_demo.png.import  hud.gd  hud.gd.uid  hud.tscn  icon.svg.import  main.gd  main.gd.uid  main.tscn  mob.gd  mob.gd.uid  mob.tscn  player.gd  player.gd.uid  player.tscn  project.godot
gamedot_version/art/: House In a Forest Loop.ogg.import  enemyFlyingAlt_1.png.import  enemyFlyingAlt_2.png.import  gameover.wav.import  playerGrey_walk1.png.import
gamedot_version/fonts/: Xolonium-Regular.ttf.import
